# crawl_data

./: Dockerfile  docker-compose.yaml  pyproject.toml
airflow/dags/: crawl_marathons_scheduler.py  example_dag.py
scrapy/runners/: scrapy.cfg
scrapy/runners/runners/: items.py  middlewares.py  pipelines.py  settings.py
