[tool.poetry]
name = "crawl-data"
version = "0.1.0"
description = ""
authors = ["Donghyo <cico1379@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
apache-airflow = "^2.9.2"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
